<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="30dp"
    tools:context="tki.fer.hr.dementia.InformationActivity">


    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="15sp"
        android:text="@string/nameData" />

    <TextView
        android:id="@+id/nameData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="" />

    <TextView
        android:id="@+id/surnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="15sp"
        android:text="@string/surnameData" />

    <TextView
        android:id="@+id/surnameData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="15sp"
        android:text="@string/addressData" />

    <TextView
        android:id="@+id/addressData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="" />

    <TextView
        android:id="@+id/currentAddressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/currentLocation"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="15dp"/>


</LinearLayout>
